# sir-markov-chain

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
notebooks/: exploration.ipynb  pipeline_completo.ipynb
report/: presentazione.md  relazione.md
src/: __init__.py  analysis.py  model.py  plotting.py  sensitivity.py  simulation.py
tests/: test_model.py
