[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sir-markov-chain"
version = "1.0.0"
description = "Modello SIR come catena di Markov a tempo discreto — simulazione Monte Carlo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Francesco Castaldi" },
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/FrancescoCastaldi/sir-markov-chain"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
